[package]
name = "dnf-sat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="main"
path="src/main_current.rs"

[[bin]]
name="converter"
path="src/converter.rs"

[dependencies]
rayon = "1.9"
crossbeam = "0.8.4"
